my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ENMETH/ENMETH.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENMETH.dml:7:1: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENMETH.dml:9:5: error ENMETH: not a method: '1'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENMETH.dml:11:5: error ENMETH: not a method: '$test'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENMETH.dml:13:5: error ENMETH: not a method: '1'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENMETH.dml:15:5: error ENMETH: not a method: '$test'
